--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-pageflip": "^2.0.3",
     "react-router-dom": "^6.2.1",
     "react-scan": "^0.2.8",
-    "react-scripts": "^5.0.1",
     "react-window": "^1.8.11",
     "sass": "^1.47.0",
     "web-vitals": "^2.1.3"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
