--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-grid-system": "^8.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-lazy-load-image-component": "^1.6.3",
     "react-on-screen": "^2.1.1",
